# BankSimulatorHomework

./: CMakeLists.txt  main.cpp
Bank/: Bank.cpp  Bank.h  Bill.cpp  Bill.h
Bank/clients/: Admin.cpp  Admin.h  Client.cpp  Client.h  User.cpp  User.h
Bank/exceptions/: BillAlreadyExistsException.cpp  BillAlreadyExistsException.h  NoSuchBillException.cpp  NoSuchBillException.h  NoSuchUserException.cpp  NoSuchUserException.h  TooLowMoneyException.h  WrongCommandException.h
Bank/utils/: List.h  String.cpp  String.h  Utils.cpp  Utils.h
